--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -5938,8 +5938,8 @@ html {
   .dl-horizontal dd:after,
   .container:before,
   .container:after,
-  .container-fluid:before,
-  .container-fluid:after,
+  /* .container-fluid:before,
+  .container-fluid:after, */
   .row:before,
   .row:after,
   .form-horizontal .form-group:before,
@@ -5968,7 +5968,7 @@ html {
   .clearfix:after,
   .dl-horizontal dd:after,
   .container:after,
-  .container-fluid:after,
+  /* .container-fluid:after, */
   .row:after,
   .form-horizontal .form-group:after,
   .btn-toolbar:after,
