--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -39,38 +39,33 @@ html(lang="en-GB")
 					.container
 						h2 What we do?
 						.row
-							.col-md-3
+							.icon-item
 								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 1")
 								h2 UI Design
-								span UI Design
-							.col-md-3
+							.icon-item
 								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 2")
 								h2 UX Design
-								span UX Design
-							.col-md-3
+							.icon-item
 								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 3")
 								h2 Illustration
-								span Illustration
-							.col-md-3
+							.icon-item
 								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 3")
 								h2 3D Design
-								span 3D Design
-							.col-md-3
+							.icon-item
 								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 1")
 								h2 Graphic Design
-								span Graphic Design
-							.col-md-3
+							.icon-item
 								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 2")
 								h2 Branding
-								span Branding
-							.col-md-3
+							.icon-item
 								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 3")
 								h2 Web Development
-								span Web Development
-							.col-md-3
+							.icon-item
 								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 3")
 								h2 Mobile App Dev.
-								span Mobile App Dev.
+							.icon-item
+								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 3")
+								h2 Micro Motion
 				.section.section-works
 					.container
 						h2 Our works
