--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -11,12 +11,16 @@ header
                     align-items: center
                     li
                         padding: 0 1rem
-                        a.button.ghost
             .col-md-4:last-child
                 display: flex
                 justify-content: flex-end
                 align-items: center
 main
+    div
+        .container
+                h2
+                    display: block
+                    text-align: center
     .section-opening
         .container
             h1
@@ -24,6 +28,23 @@ main
                 font-size: 86px
                 line-height: 135%
                 text-align: center
+    .section-how-work
+        .container
+            .row
+                display: flex
+                justify-content: center
+                align-items: flex-start
+                flex-wrap: wrap
+                .icon-item
+                    padding: 5px
+                    width: 18%
+                    margin: 10px
+                    display: flex
+                    justify-content: flex-start
+                    align-items: center
+                    flex-direction: column
+                    h2
+                        text-align: center
 footer
     .container
         .row
