--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -19,6 +19,8 @@ html(lang="en-GB")
 						.col-md-4
 							ul
 								li
+									a(href="#") Home
+								li
 									a(href="#") Works
 								li
 									a(href="#") Services
@@ -87,6 +89,8 @@ html(lang="en-GB")
 					.row
 						.col-md-5
 							ul
+								li
+									a(href="#") Home
 								li
 									a(href="#") Works
 								li
