--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en-GB")
 	head
 		meta(charset="utf-8")
-		title Gulp Sass Pug playground
+		title Hyperfantasy
 		link(rel="stylesheet" href="main.css")
 		link(rel="stylesheet", href="https://cdn.jsdelivr.net/gh/dmhendricks/bootstrap-grid-css@4.1.3/dist/css/bootstrap-grid.min.css")
 		link(rel="shortcut icon", href="https://hyperfantasy.co/favicon.ico", type="image/x-icon")
@@ -14,21 +14,23 @@ html(lang="en-GB")
 			header
 				.container
 					.row
-						.col-md-4
+						.col-md-3
 							img(src="https://hyperfantasy.co/assets/styles/images/logo_mark_hyperfantasy.png", width=56, alt="Hyperfantasy Logo")
-						.col-md-4
+						.col-md-6
 							ul
 								li
 									a(href="#") Home
 								li
-									a(href="#") Works
+									a(href="#") About
 								li
 									a(href="#") Services
+								li
+									a(href="#") Works
 								li
 									a(href="#") Trust
 								li
 									a(href="#") Contact
-						.col-md-4
+						.col-md-3
 							a(href="#", class="button ghost") Portfolio
 			main
 				.section.section-opening
@@ -42,31 +44,31 @@ html(lang="en-GB")
 						h2 What we do?
 						.row
 							.icon-item
-								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 1")
+								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1")
 								h2 UI Design
 							.icon-item
-								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 2")
+								img(src="assets/img/icon/smile.svg", width=64, alt="Hyperfantasy Work - Step 2")
 								h2 UX Design
 							.icon-item
-								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 3")
+								img(src="assets/img/icon/image.svg", width=64, alt="Hyperfantasy Work - Step 3")
 								h2 Illustration
 							.icon-item
-								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 3")
+								img(src="assets/img/icon/codesandbox.svg", width=64, alt="Hyperfantasy Work - Step 3")
 								h2 3D Design
 							.icon-item
-								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 1")
+								img(src="assets/img/icon/printer.svg", width=64, alt="Hyperfantasy Work - Step 1")
 								h2 Graphic Design
 							.icon-item
-								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 2")
+								img(src="assets/img/icon/chrome.svg", width=64, alt="Hyperfantasy Work - Step 2")
 								h2 Branding
 							.icon-item
-								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 3")
+								img(src="assets/img/icon/layout.svg", width=64, alt="Hyperfantasy Work - Step 3")
 								h2 Web Development
 							.icon-item
-								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 3")
+								img(src="assets/img/icon/smartphone.svg", width=64, alt="Hyperfantasy Work - Step 3")
 								h2 Mobile App Dev.
 							.icon-item
-								img(src="assets/img/dummy-640x480-badass.jpg", width=64, alt="Hyperfantasy Work - Step 3")
+								img(src="assets/img/icon/play-circle.svg", width=64, alt="Hyperfantasy Work - Step 3")
 								h2 Micro Motion
 				.section.section-works
 					.container
@@ -92,9 +94,11 @@ html(lang="en-GB")
 								li
 									a(href="#") Home
 								li
-									a(href="#") Works
+									a(href="#") About
 								li
 									a(href="#") Services
+								li
+									a(href="#") Works
 								li
 									a(href="#") Trust
 								li
