--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -3,6 +3,10 @@ html(lang="en-GB")
 	head
 		meta(charset="utf-8")
 		title Hyperfantasy
+		meta(charset='utf-8')
+		meta(http-equiv='X-UA-Compatible', content='IE=edge')
+		meta(name='description', content='Some description')
+		meta(name='viewport', content='width=device-width, initial-scale=1')
 		link(rel="stylesheet" href="main.css")
 		link(rel="stylesheet", href="https://cdn.jsdelivr.net/gh/dmhendricks/bootstrap-grid-css@4.1.3/dist/css/bootstrap-grid.min.css")
 		link(rel="shortcut icon", href="https://hyperfantasy.co/favicon.ico", type="image/x-icon")
@@ -43,31 +47,31 @@ html(lang="en-GB")
 					.container
 						h2 What we do?
 						.row
-							.icon-item
+							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
 								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1")
 								h2 UI Design
-							.icon-item
+							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
 								img(src="assets/img/icon/smile.svg", width=64, alt="Hyperfantasy Work - Step 2")
 								h2 UX Design
-							.icon-item
+							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
 								img(src="assets/img/icon/image.svg", width=64, alt="Hyperfantasy Work - Step 3")
 								h2 Illustration
-							.icon-item
+							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
 								img(src="assets/img/icon/codesandbox.svg", width=64, alt="Hyperfantasy Work - Step 3")
 								h2 3D Design
-							.icon-item
+							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
 								img(src="assets/img/icon/printer.svg", width=64, alt="Hyperfantasy Work - Step 1")
 								h2 Graphic Design
-							.icon-item
+							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
 								img(src="assets/img/icon/chrome.svg", width=64, alt="Hyperfantasy Work - Step 2")
 								h2 Branding
-							.icon-item
+							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
 								img(src="assets/img/icon/layout.svg", width=64, alt="Hyperfantasy Work - Step 3")
 								h2 Web Development
-							.icon-item
+							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
 								img(src="assets/img/icon/smartphone.svg", width=64, alt="Hyperfantasy Work - Step 3")
 								h2 Mobile App Dev.
-							.icon-item
+							.icon-item.col-xs-5.col-sm-4.col-md-3.col-lg-2
 								img(src="assets/img/icon/play-circle.svg", width=64, alt="Hyperfantasy Work - Step 3")
 								h2 Micro Motion
 				.section.section-works
@@ -109,10 +113,11 @@ html(lang="en-GB")
 							ul
 								li
 									a(href="#") © 2022, Hyperfantasy. All rights reserved.
-								li
-									a(class="icon-link",href="https://dribbble.com/hyperfantasy")
-										span(class="icon",id="icon-dribbble")
-      
-								li
-									a(class="icon-link",href="https://www.instagram.com/hyperfantasy.creative")
-										span(class="icon",id="icon-instagram")
+								ul
+									li
+										a(class="icon-link",href="https://dribbble.com/hyperfantasy")
+											span(class="icon",id="icon-dribbble")
+		
+									li
+										a(class="icon-link",href="https://www.instagram.com/hyperfantasy.creative")
+											span(class="icon",id="icon-instagram")
