text align: center

--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -40,7 +40,7 @@ html(lang="en-GB")
 				.section.section-opening
 					.container
 						h1 Leveraging design<br/> &amp; tech to bring<br/> your fantasy life!
-						p We are Hyperfantasy, creative team that love to solve problem &amp; building awesome digital experiences
+						//- p We are Hyperfantasy, creative team that love to solve problem &amp; building awesome digital experiences
 						span Have any fantasy?
 						a(href="#") Let’s talk!
 				.section.section-how-work
