--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -31,7 +31,10 @@ main
                 font-weight: 600
                 font-size: 86px
                 line-height: 135%
+            h1, p, span, a
                 text-align: center
+            span, a
+                display: block
     .section-how-work
         .container
             .row
@@ -53,6 +56,11 @@ main
                         text-align: center
                         font-size: 16px
                         font-weight: 500
+    .section-action
+        .container
+            a
+                display: block
+                text-align: center
 footer
     .container
         .row
