--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -42,7 +42,8 @@ html(lang="en-GB")
 						h1 Leveraging design<br/> &amp; tech to bring<br/> your fantasy life!
 						//- p We are Hyperfantasy, creative team that love to solve problem &amp; building awesome digital experiences
 						span Have any fantasy?
-						a(href="#") Let’s talk!
+						span
+							a(href="#") Let’s talk!
 				.section.section-how-work
 					.container
 						h2 What we do?
@@ -88,8 +89,9 @@ html(lang="en-GB")
 						h2 Testimonials
 				.section.section-action
 					.container
-						h2 Have any fantasy?
-						a(href="#") Send us an email!
+						h2 Have any awesome fantasy?
+						span
+							a(href="#") Let’s talk!
 			footer
 				.container
 					.row
