--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -81,9 +81,29 @@ html(lang="en-GB")
 				.section.section-shots
 					.container
 						h2 Our Shots
+						.row
+							.col-12.col-sm-6.col-md-6.col-lg-4
+								img(src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/4bfd4c138970509.622809b25f730.png", alt="NFTy")
+							.col-12.col-sm-6.col-md-6.col-lg-4
+								img(src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/29e985138970301.622808f0746ba.png", alt="NFTy")
+							.col-12.col-sm-6.col-md-6.col-lg-4
+								img(src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/6b1d54138970043.622807cba6242.png", alt="NFTy")
 				.section.section-clients
 					.container
-						h2 Clients
+						//- h2 Clients
+						.row
+							.col-6.col-sm-3.col-md-3.col-lg-2
+								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1")
+							.col-6.col-sm-3.col-md-3.col-lg-2
+								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1")
+							.col-6.col-sm-3.col-md-3.col-lg-2
+								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1")
+							.col-6.col-sm-3.col-md-3.col-lg-2
+								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1")
+							.col-6.col-sm-3.col-md-3.col-lg-2
+								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1")
+							.col-6.col-sm-3.col-md-3.col-lg-2
+								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1") 
 				.section.section-testimonials
 					.container
 						h2 Testimonials
