--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -67,6 +67,14 @@ main
                         text-align: center
                         font-size: 16px
                         font-weight: 500
+    .section-shots
+        .container
+            .row
+                div
+                    img
+                        max-width: 100%
+                        height: auto
+                        border-radius: 8px
     .section-action
         .container
             padding: 100px
