--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -35,7 +35,7 @@ html(lang="en-GB")
 								li
 									a(href="#") Contact
 						.col-md-3
-							a(href="#", class="button ghost") Portfolio
+							a.button.ghost(href="https://www.instagram.com/hyperfantasy.creative", target="_blank") Portfolio
 			main
 				.section.section-opening
 					.container
@@ -43,75 +43,80 @@ html(lang="en-GB")
 						//- p We are Hyperfantasy, creative team that love to solve problem &amp; building awesome digital experiences
 						span Have any fantasy?
 						span
-							a(href="#") Let’s talk!
+							a(href="mailto:hello.hyperfantasy@gmail.com") Let’s talk!
 				.section.section-how-work
 					.container
 						h2 What we do?
 						.row
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1")
+								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - UI Design")
 								h2 UI Design
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/smile.svg", width=64, alt="Hyperfantasy Work - Step 2")
+								img(src="assets/img/icon/smile.svg", width=64, alt="Hyperfantasy Work - UX Design")
 								h2 UX Design
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/image.svg", width=64, alt="Hyperfantasy Work - Step 3")
+								img(src="assets/img/icon/image.svg", width=64, alt="Hyperfantasy Work - Illustration")
 								h2 Illustration
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/codesandbox.svg", width=64, alt="Hyperfantasy Work - Step 3")
+								img(src="assets/img/icon/codesandbox.svg", width=64, alt="Hyperfantasy Work - 3D Design")
 								h2 3D Design
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/printer.svg", width=64, alt="Hyperfantasy Work - Step 1")
+								img(src="assets/img/icon/printer.svg", width=64, alt="Hyperfantasy Graphic Design")
 								h2 Graphic Design
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/chrome.svg", width=64, alt="Hyperfantasy Work - Step 2")
+								img(src="assets/img/icon/chrome.svg", width=64, alt="Hyperfantasy Work - Branding")
 								h2 Branding
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/layout.svg", width=64, alt="Hyperfantasy Work - Step 3")
+								img(src="assets/img/icon/layout.svg", width=64, alt="Hyperfantasy Work - Web Development")
 								h2 Web Development
 							.icon-item.col-5.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/smartphone.svg", width=64, alt="Hyperfantasy Work - Step 3")
+								img(src="assets/img/icon/smartphone.svg", width=64, alt="Hyperfantasy Work - Mobile App Dev.")
 								h2 Mobile App Dev.
 							.icon-item.col-xs-5.col-sm-4.col-md-3.col-lg-2
-								img(src="assets/img/icon/play-circle.svg", width=64, alt="Hyperfantasy Work - Step 3")
+								img(src="assets/img/icon/play-circle.svg", width=64, alt="Hyperfantasy Work - Micro Motion")
 								h2 Micro Motion
 				.section.section-works
 					.container
 						h2 Our works
+						.row.card-work
+						.row.card-work
+						.row.card-work
 				.section.section-shots
 					.container
 						h2 Our Shots
 						.row
 							.col-12.col-sm-6.col-md-6.col-lg-4
-								img(src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/4bfd4c138970509.622809b25f730.png", alt="NFTy")
+								img(src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/4bfd4c138970509.622809b25f730.png", alt="NFTy Dashboard")
 							.col-12.col-sm-6.col-md-6.col-lg-4
-								img(src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/29e985138970301.622808f0746ba.png", alt="NFTy")
+								img(src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/29e985138970301.622808f0746ba.png", alt="NFTy Mobile App")
 							.col-12.col-sm-6.col-md-6.col-lg-4
-								img(src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/6b1d54138970043.622807cba6242.png", alt="NFTy")
+								img(src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/6b1d54138970043.622807cba6242.png", alt="NFTy Website Landing Page")
+						.row.flex-center
+							a.button.ghost(href="https://www.instagram.com/hyperfantasy.creative", target="_blank") Portfolio
 				.section.section-clients
 					.container
 						//- h2 Clients
 						.row
 							.col-6.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1")
+								img(src="https://static.wixstatic.com/media/50d469_aa8f88e1c7ef41b992b033fb9b6ad3d2~mv2.png/v1/crop/x_0,y_9,w_1214,h_356/fill/w_273,h_80,al_c,usm_0.66_1.00_0.01,enc_auto/wolftagon_logo_OK.png", width=180, alt="Wolftagon")
 							.col-6.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1")
+								img(src="https://thegreatsoft.com/assets/user/images/kallyas_icon.png", width=56, alt="Greatsoft")
 							.col-6.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1")
+								img(src="https://www.tresnan.co/logo-grey.png", width=180, alt="Tresnan")
 							.col-6.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1")
+								img(src="https://akasia.id/wp-content/uploads/2021/04/akasia-logo-footer-1.png", width=86, alt="Akasia")
 							.col-6.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1")
+								img(src="https://www.tamawal.sa/catalog/view/theme/default/common/en/images/footer/Foot_Logo.png", width=124, alt="Tammwel")
 							.col-6.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/icon/airplay.svg", width=64, alt="Hyperfantasy Work - Step 1") 
-				.section.section-testimonials
-					.container
-						h2 Testimonials
+								img(src="http://www.asiansigmatechnology.com/89c9620c82872f46ffd1b7099297efe1.png", width=180, alt="Sigmatech")
+				//- .section.section-testimonials
+				//- 	.container
+				//- 		h2 Testimonials
 				.section.section-action
 					.container
 						h2 Have any awesome fantasy?
 						span
-							a(href="#") Let’s talk!
+							a(href="mailto:hello.hyperfantasy@gmail.com") Let’s talk!
 			footer
 				.container
 					.row
@@ -119,8 +124,8 @@ html(lang="en-GB")
 							ul
 								li
 									a(href="#") Home
-								li
-									a(href="#") About
+								//- li
+								//- 	a(href="#") About
 								li
 									a(href="#") Services
 								li
@@ -134,7 +139,7 @@ html(lang="en-GB")
 						.col-md-5
 							ul
 								li
-									a(href="#") © 2022, Hyperfantasy. All rights reserved.
+									a(href="https://www.instagram.com/hyperfantasy.creative", target="_blank") © 2022, Hyperfantasy. All rights reserved.
 								ul
 									li
 										a(class="icon-link",href="https://dribbble.com/hyperfantasy")
