--- a/public/hyperfantasy-web/_src/_sass/_base.sass
+++ b/public/hyperfantasy-web/_src/_sass/_base.sass
@@ -14,3 +14,12 @@ li
 a
     text-decoration: none
     color: #ffffff
+.ghost
+    border: 1px solid rgba(255,255,255,0.64)
+    box-sizing: border-box
+    border-radius: 24px
+    padding: 8px 16px 10px
+.flex-center
+    display: flex
+    justify-content: center
+    align-items: center
