--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -67,6 +67,14 @@ main
                         text-align: center
                         font-size: 16px
                         font-weight: 500
+    .section-works
+        .container
+            .card-work
+                padding: 180px
+                background: #181346
+                border-radius: 32px
+                min-height: 100px
+                margin: 60px 0
     .section-shots
         .container
             .row
@@ -75,6 +83,18 @@ main
                         max-width: 100%
                         height: auto
                         border-radius: 8px
+            .flex-center
+                margin: 48px auto
+    .section-clients
+        .container
+            .row
+                div
+                    display: flex
+                    justify-content: center
+                    align-items: center
+                    img
+                        max-width: 100%
+                        max-height: 100%
     .section-action
         .container
             padding: 100px
