--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -76,7 +76,7 @@ html(lang="en-GB")
 								h2 Micro Motion
 				.section.section-works
 					.container
-						h2 Our works
+						h2 Our Works
 				.section.section-shots
 					.container
 						h2 Our Shots
