--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -79,8 +79,27 @@ html(lang="en-GB")
 					.container
 						h2 Our Works
 						.row.card-work
+							.col-12.col-sm-12.col-md-6.col-lg-6
+								span Learning App
+								h3 Lentera Kita
+								p We are Hyperfantasy, creative team that love to solve problem and building awesome digital products. Again, awesome ones.
+							.col-12.col-sm-12.col-md-6.col-lg-6
+								img(src="assets/img/card-phone-right.png", width=64, alt="Card Phone Right")
 						.row.card-work
+							.col-12.col-sm-12.col-md-6.col-lg-6
+								img(src="assets/img/card-phone-left.png", width=64, alt="Card Phone Left")
+							.col-12.col-sm-12.col-md-6.col-lg-6
+								span Conservation App
+								h3 Kalaweit
+								p Kalaweit is a French association that works to protect biodiversity in Indonesia: saving animals, protecting forests.
 						.row.card-work
+							.col-12.col-sm-12.col-md-6.col-lg-6
+								span Healthy App
+								h3 BOKIA 
+									span (Buku Online Kesehatan Ibu &amp; Anak)
+								p Online version of Mother &amp; Child Health Book for pregnant women, used by information &amp; media for recording fetal &amp; children's growth &amp; development.
+							.col-12.col-sm-12.col-md-6.col-lg-6
+								img(src="assets/img/card-phone-right.png", width=64, alt="Card Phone Right")
 				.section.section-shots
 					.container
 						h2 Our Shots
