--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -70,11 +70,50 @@ main
     .section-works
         .container
             .card-work
-                padding: 180px
+                padding: 64px 86px
                 background: #181346
                 border-radius: 32px
                 min-height: 100px
-                margin: 60px 0
+                margin: 100px 0
+                align-items: center
+                div
+                    position: relative
+                    span
+                        font-weight: 400
+                        font-size: 16px
+                        line-height: 150%
+                        color: #7F47F2
+                        display: block
+                        margin-bottom: 10px
+                        width: 100%
+                    h3
+                        margin: 20px 0 10px
+                        font-weight: 600
+                        font-size: 32px
+                        line-height: 48px
+                        width: 100%
+                        span
+                            font-size: 16px
+                            line-height: 30px
+                            color: #FFFFFF
+                            display: inline
+                    p
+                        font-weight: 400
+                        font-size: 16px
+                        line-height: 170%
+                        color: rgba(255, 255, 255, 0.72)
+                        width: 100%
+                        margin-bottom: 0
+                    img
+                        height: 400px
+                        width: auto
+                        position: absolute
+                        top: -200px
+                        margin: 0 15%
+            .card-work:nth-child(3)
+                div
+                    img
+                        margin: 0
     .section-shots
         .container
             .row
@@ -98,10 +137,14 @@ main
     .section-action
         .container
             padding: 100px
-            background: #060029
+            background: #181346
             border-radius: 24px
             h2
-                margin-bottom: 48px
+                font-weight: 600
+                font-size: 48px
+                line-height: 72px
+                margin-top: 0
+                margin-bottom: 40px
             span
                 display: block
                 font-size: 20px
