--- a/public/hyperfantasy-web/_src/_sass/_base.sass
+++ b/public/hyperfantasy-web/_src/_sass/_base.sass
@@ -18,7 +18,7 @@ a
     border: 1px solid rgba(255,255,255,0.64)
     box-sizing: border-box
     border-radius: 24px
-    padding: 8px 16px 10px
+    padding: 8px 16px
 .flex-center
     display: flex
     justify-content: center
