--- a/public/hyperfantasy-web/_src/_sass/_layout.sass
+++ b/public/hyperfantasy-web/_src/_sass/_layout.sass
@@ -82,7 +82,8 @@ main
                         font-weight: 400
                         font-size: 16px
                         line-height: 150%
-                        color: #7F47F2
+                        // color: #7F47F2
+                        color: #b394f4
                         display: block
                         margin-bottom: 10px
                         width: 100%
@@ -93,7 +94,7 @@ main
                         line-height: 48px
                         width: 100%
                         span
-                            font-size: 16px
+                            font-size: 14px
                             line-height: 30px
                             color: #FFFFFF
                             display: inline
@@ -185,21 +186,19 @@ footer
                                 height: 24px
                                 display: inline-block
                                 margin-right: 10px
-                    ul
-                        li
-                            a
-                                #icon-dribbble
-                                    background-image: url('https://hyperfantasy.co/assets/styles/images/icon-social-media-dribbble.png')
-                                #icon-instagram
-                                    background-image: url('https://hyperfantasy.co/assets/styles/images/icon-social-media-instagram.png')
-                        li:first-child
-                            padding: 0 0
-                            margin-right: 10px
-
-
+                        ul
+                            li
+                                a
+                                    #icon-dribbble
+                                        background-image: url('https://hyperfantasy.co/assets/styles/images/icon-social-media-dribbble.png')
+                                    #icon-instagram
+                                        background-image: url('https://hyperfantasy.co/assets/styles/images/icon-social-media-instagram.png')
+                            li:first-child
+                                padding: 0 0
+                                margin-right: 10px
                     li:first-child
                         font-size: 12px
-                        margin-right: 24px
+                        margin-right: 28px
 
 @media (max-width: 768px)
     header
