--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -9,19 +9,19 @@ html(lang="en-GB")
 		//- meta(http-equiv='Content-Security-Policy', content="default-src 'self';")
 		meta(name='description', content='Some description')
 		meta(name='viewport', content='width=device-width, initial-scale=1')
-		link(rel="stylesheet" href="main.css")
-		link(rel="stylesheet", href="https://cdn.jsdelivr.net/gh/dmhendricks/bootstrap-grid-css@4.1.3/dist/css/bootstrap-grid.min.css", async)
 		link(rel="shortcut icon", href="https://hyperfantasy.co/favicon.ico", type="image/x-icon")
+		link(rel="stylesheet" href="main.css")
+		link(rel="preload", href="https://cdn.jsdelivr.net/gh/dmhendricks/bootstrap-grid-css@4.1.3/dist/css/bootstrap-grid.min.css", as="style", onload="this.rel='stylesheet'")
 		link(rel="preconnect", href="https://fonts.googleapis.com")
 		link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
-		link(href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap", rel="stylesheet", async)
+		link(href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap", rel="preload", as="style" onload="this.rel='stylesheet'")
 	body
 		.bootstrap-wrapper
 			header
 				.container
 					.row
 						.col-md-3
-							img(src="https://hyperfantasy.co/assets/styles/images/logo_mark_hyperfantasy.png", width=56, height=52.69, alt="Hyperfantasy Logo")
+							img(src="assets/img/logo-hyperfantasy-pictogram.svg", width=56, height=52.69, alt="Hyperfantasy Logo")
 						.col-md-6
 							ul
 								li
@@ -107,11 +107,11 @@ html(lang="en-GB")
 						h2 Our Shots
 						.row
 							.col-12.col-sm-6.col-md-6.col-lg-4
-								img(src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/4bfd4c138970509.622809b25f730.png", alt="NFTy Dashboard", width=350, height=350)
+								img(src="assets/img/NFTy-square-dashoard-1.png", alt="NFTy Dashboard", width=350, height=350)
 							.col-12.col-sm-6.col-md-6.col-lg-4
-								img(src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/29e985138970301.622808f0746ba.png", alt="NFTy Mobile App", width=350, height=350)
+								img(src="assets/img/NFTy-square-app-1.png", alt="NFTy Mobile App", width=350, height=350)
 							.col-12.col-sm-6.col-md-6.col-lg-4
-								img(src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/6b1d54138970043.622807cba6242.png", alt="NFTy Website Landing Page", width=350, height=350)
+								img(src="assets/img/NFTy-square-web-1.png", alt="NFTy Website Landing Page", width=350, height=350)
 						.row.flex-center
 							a.button.ghost(href="https://www.instagram.com/hyperfantasy.creative", target="_blank", alt="Portfolio") Portfolio
 				.section.section-clients
@@ -119,17 +119,17 @@ html(lang="en-GB")
 						//- h2 Clients
 						.row
 							.col-6.col-sm-3.col-md-3.col-lg-2
-								img(src="https://static.wixstatic.com/media/50d469_aa8f88e1c7ef41b992b033fb9b6ad3d2~mv2.png/v1/crop/x_0,y_9,w_1214,h_356/fill/w_273,h_80,al_c,usm_0.66_1.00_0.01,enc_auto/wolftagon_logo_OK.png", width=160, height=43.956, alt="Wolftagon")
+								img(src="assets/img/logos/logo-wolftagon.png", width=160, height=43.956, alt="Wolftagon")
 							.col-6.col-sm-3.col-md-3.col-lg-2
-								img(src="https://thegreatsoft.com/assets/user/images/kallyas_icon.png", width=56, height=60.48, alt="Greatsoft")
+								img(src="assets/img/logos/logo-greatsoft.png", width=56, height=60.48, alt="Greatsoft")
 							.col-6.col-sm-3.col-md-3.col-lg-2
-								img(src="https://www.tresnan.co/logo-grey.png", width=160, height=24.75, alt="Tresnan")
+								img(src="assets/img/logos/logo-tresnan.png", width=160, height=24.75, alt="Tresnan")
 							.col-6.col-sm-3.col-md-3.col-lg-2
-								img(src="https://akasia.id/wp-content/uploads/2021/04/akasia-logo-footer-1.png", width=86, height=53.31, alt="Akasia")
+								img(src="assets/img/logos/logo-akasia.png", width=86, height=53.31, alt="Akasia")
 							.col-6.col-sm-3.col-md-3.col-lg-2
-								img(src="https://www.tamawal.sa/catalog/view/theme/default/common/en/images/footer/Foot_Logo.png", width=124, height=41.33, alt="Tammwel")
+								img(src="assets/img/logos/logo-tammwel.png", width=124, height=41.33, alt="Tammwel")
 							.col-6.col-sm-3.col-md-3.col-lg-2
-								img(src="assets/img/logo-sigmatech.png", width=160, height=46.65, alt="Sigmatech")
+								img(src="assets/img/logos/logo-sigmatech.png", width=160, height=46.65, alt="Sigmatech")
 				//- .section.section-testimonials
 				//- 	.container
 				//- 		h2 Testimonials
@@ -156,7 +156,7 @@ html(lang="en-GB")
 								li
 									a(href="#", alt="Contact") Contact
 						.col-md-2
-							img(src="https://hyperfantasy.co/assets/styles/images/logo_mark_hyperfantasy.png", width=48, height=45.26, alt="Hyperfantasy Logo")
+							img(src="assets/img/logo-hyperfantasy-pictogram.svg", width=48, height=45.26, alt="Hyperfantasy Logo")
 						.col-md-5
 							ul
 								li
