--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -46,6 +46,9 @@ html(lang="en-GB")
 						span Have any fantasy?
 						span
 							a(href="mailto:hello.hyperfantasy@gmail.com", alt="mailto:hello.hyperfantasy@gmail.com") Let&apos;s talk!
+				//- .section.section-about
+				//- 	.container
+				//- 		h2 We Are Hyperfantasy
 				.section.section-how-work
 					.container
 						h2 What we do?
