--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -89,10 +89,10 @@ html(lang="en-GB")
 								h3 Lentera Kita
 								p We are Hyperfantasy, creative team that love to solve problem and building awesome digital products. Again, awesome ones.
 							.col-12.col-sm-12.col-md-6.col-lg-6
-								img(src="assets/img/card-phone-right.png", width=368, height=400, alt="Card Phone Right")
+								img(src="assets/img/skew-photo-1.png", width=368, height=400, alt="Lentera Kita")
 						.row.card-work
 							.col-12.col-sm-12.col-md-6.col-lg-6
-								img(src="assets/img/card-phone-left.png", width=368, height=400, alt="Card Phone Left")
+								img(src="assets/img/skew-photo-2.png", width=368, height=400, alt="Kalaweit")
 							.col-12.col-sm-12.col-md-6.col-lg-6
 								span Conservation App
 								h3 Kalaweit
@@ -104,7 +104,7 @@ html(lang="en-GB")
 									span (Buku Online Kesehatan Ibu &amp; Anak)
 								p Online version of Mother &amp; Child Health Book for pregnant women, used by information &amp; media for recording fetal &amp; children&apos;s growth &amp; development.
 							.col-12.col-sm-12.col-md-6.col-lg-6
-								img(src="assets/img/card-phone-right.png", width=368, height=400, alt="Card Phone Right")
+								img(src="assets/img/skew-photo-3.png", width=368, height=400, alt="BOKIA")
 				.section.section-shots
 					.container
 						h2 Our Shots
