--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -46,10 +46,12 @@ html(lang="en-GB")
 						span Have any fantasy?
 						span
 							a(href="mailto:hello.hyperfantasy@gmail.com", alt="mailto:hello.hyperfantasy@gmail.com") Let&apos;s talk!
-				//- .section.section-about
-				//- 	.container
-				//- 		h2 We Are Hyperfantasy
-				//- 			p We Are Hyperfantasy ...
+				.section.section-about
+					.container
+						span ABOUT US
+						h2 We are Hyperfantasy <br/>Let’s work together!
+						p We are creative team that love to solve problem &amp; building awesome digital products.
+						span.steps Listening  +  Design Thinking  +  Creative Solution
 				.section.section-how-work
 					.container
 						h2 What we do?
@@ -134,9 +136,14 @@ html(lang="en-GB")
 								img(src="assets/img/logos/logo-tammwel.png", width=124, height=41.33, alt="Tammwel")
 							.col-6.col-sm-3.col-md-3.col-lg-2
 								img(src="assets/img/logos/logo-sigmatech.png", width=160, height=46.65, alt="Sigmatech")
-				//- .section.section-testimonials
-				//- 	.container
-				//- 		h2 Testimonials
+				.section.section-testimonials
+					.container
+						span TESTIMONIALS
+						h2 What they said about us
+						img(src="assets/img/photo.png", alt="Photo", width=245, height=320)
+						p Hyperfantasy is a motivated, forward thinking and also intelligent UI Designer team with lots of knowledge in his field. Proactive, energetic and totally organized. 
+						span.testimony-name Valentina Sevchenco
+						span.testimony-role Founder Koleksi
 				.section.section-action
 					.container
 						h2 Have any awesome fantasy?
