--- a/public/hyperfantasy-web/_src/_pug/index.pug
+++ b/public/hyperfantasy-web/_src/_pug/index.pug
@@ -49,6 +49,7 @@ html(lang="en-GB")
 				//- .section.section-about
 				//- 	.container
 				//- 		h2 We Are Hyperfantasy
+				//- 			p We Are Hyperfantasy ...
 				.section.section-how-work
 					.container
 						h2 What we do?
